# eva-rag

./: .dockerignore  .env.example  .eva-housekeeping.json  .eva-manifest.json  .eva-memory.json  .eva-production-status.json  .gitignore  ACTION-PLAN-20251209.md  API-USAGE-GUIDE.md  AZURE-CONNECTIVITY-STATUS.md  COVERAGE-STATUS.md  CURRENT-STATUS.md  DEEP-ASSESSMENT-20251209.md  DELIVERY-PACKAGE.md  DEPLOYMENT-COMPLETE.md  DEPLOYMENT-PACKAGE.md  DEVELOPMENT-GUIDE.md  Dockerfile  EVA-DATA-PIPELINE-PATTERN.md  IMPROVEMENTS-SUMMARY.md  INGESTION-EVIDENCE-REPORT.txt  Load-Secrets.ps1  QUALITATIVE-ASSESSMENT.md  QUICK-START.md  README.md  SENIOR-ADVISOR-REQUEST.md  SENIOR-ADVISOR-RESPONSE.md  SESSION-HANDOFF-DEC09.md  Submit-To-SeniorAdvisor.ps1  TEST-COVERAGE-REPORT.md  TEST-RESULTS-AZURE-SEARCH.md  TESTING-STATUS.md  TESTING-SUMMARY.md  analyze_canadalife.py  analyze_tables.py  canadalife_ingestion_summary.txt  check_azure_connectivity.py  check_cosmos_status.py  check_db_status.py  check_evidence.py  (+35 more)
.eva/: .eva-workspace.schema.json
.github/: copilot-instructions.md
coverage/: index.html  lcov.info
data-sources/: README.md
deploy/: DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-GUIDE.md  deploy-azure.ps1  deploy.ps1  kubernetes.yaml
docs/: ANNOUNCEMENT-EVA-DATA-MODEL.md  AUTHENTICATION.md  AZURE-AI-SEARCH-IMPLEMENTATION.md  AZURE-DEPLOYMENT.md  BENCHMARKING.md  CANADA-CA-CRAWLER.md  CANADA-LIFE-DATA-STATUS.md  CANADALIFE-INGESTION-REPORT.md  CHUNKING-STRATEGY-ANALYSIS.md  DATA-INVENTORY-FOR-REVIEW.md  DATA-ORGANIZATION-IMPLEMENTATION.md  DATA-SOURCE-ORGANIZATION-STANDARD.md  DATA-SOURCE-TESTING-RESULTS.md  DATA-SOURCES-READINESS.md  EMPLOYMENT-EQUITY-ACT-INGESTION-STATUS.md  EVA-DATA-MODEL-FOUNDATION-REQUIREMENTS.md  EVA-DATA-MODEL-PRODUCTION-READY.md  EVA-DATA-MODEL-WITH-FASTER-PRINCIPLES.md  EVA-DATA-PIPELINE-ROADMAP.md  EVA-MULTI-TENANT-ARCHITECTURE.md  EVA-RAG-P2-CHUNK-SPEC-20251208.md  EVA-RAG-PHASE-2-CHUNKING-STRATEGY-20241208.md  FINAL-COVERAGE-REPORT.md  INGESTION-ARCHITECTURE.md  INGESTION-CONTINUATION-GUIDE.md  INGESTION-EXECUTION-SUMMARY.md  INGESTION-STATUS-REPORT.md  IT-COLLECTIVE-AGREEMENT-STATUS.md  IT-COLLECTIVE-AGREEMENT-TABLE-ANALYSIS.md  JURISPRUDENCE-AND-TABLES-COMPLETE.md  JURISPRUDENCE-DATA-STATUS.md  JURISPRUDENCE-SOURCES-IMPLEMENTATION.md  KAGGLE-INTEGRATION.md  LOADER-ENHANCEMENTS.md  M365-IMPLEMENTATION-SUMMARY.md  MIGRATION-GUIDE.md  MONITORING.md  PHASE-1-COMPLETE.md  RAG-CAPABILITIES-VS-DATA-PIPELINE.md  SPECIFICATION.md  (+4 more)
infra/: cosmos_db.parameters.json  deploy.ps1
scripts/: benchmark_hpk.py  migrate_to_hpk.py  rollback_migration.py  verify_containers.py
src/: index.ts
terraform/: README.md  main.tf  outputs.tf  production.tfvars  resources.tf  staging.tfvars  variables.tf
tests/: __init__.py  conftest.py  (+20 more)
(+214 files in other folders)
