[tool.poetry]
name = "eva-rag"
version = "0.1.0"
description = "EVA Suite RAG Engine - Document Ingestion, Chunking, Embedding, and Semantic Search"
authors = ["Marco Presta <marco@evasuite.com>"]
readme = "README.md"
packages = [{include = "eva_rag", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
python-multipart = "^0.0.6"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

# Document Processing
pypdf = "^4.0.0"
python-docx = "^1.0.0"
langdetect = "^1.0.9"
beautifulsoup4 = "^4.12.0"

# Azure Services
azure-storage-blob = "^12.19.0"
azure-cosmos = "^4.5.0"
azure-search-documents = "^11.4.0"
azure-identity = "^1.15.0"

# OpenAI & LangChain
openai = "^1.0.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
tiktoken = "^0.5.0"

# Vector & Search
sentence-transformers = "^2.2.0"
redis = "^5.0.0"

# Utilities
httpx = "^0.25.0"
tenacity = "^8.2.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
mypy = "^1.7.0"
ruff = "^0.1.0"
black = "^23.11.0"
types-python-dateutil = "^2.8.0"
reportlab = "^4.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring live Azure services (deselect with -m 'not integration')"
]
addopts = [
    "--cov=src/eva_rag",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=97",
    "-v"
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langdetect.*",
    "pypdf2.*",
    "docx.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
